--- a/public/reset.css
+++ b/public/reset.css
@@ -58,6 +58,26 @@ table {
     border-spacing: 0;
 }
 
+/* from here down are my personal preferences */
+
+/* border-box is a convenient default */
 * {
     box-sizing: border-box;
+}
+
+/* removing underline from link */
+a:link {
+    text-decoration: none;
+}
+
+a:visited {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: none;
+}
+
+a:active {
+    text-decoration: none;
 }
